#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------
CR-2009-09-30-1: Bugfix:     fixed bug in CR-2009-09-30-0
                 Belongs To: CR-2009-09-30-0

CR-2009-09-30-0: Enhancem.:  added to features to tcl_files/file_procedures.tcl
                 Review:     JG

RH-2009-09-30-0: Enhancem.:  wait_for_remote_dir and wait_for_remote_file
                             uses external script to wait for files or 
                             directories
                 Review:     CR
                 Enhancem.:  Hedeby: Broken tests after ambigous resource detection
                             removal fixed
                 Review:     MB

MP-2009-09-28-0: Enhancem.:  issue 2755 has only been fixed from 6.2, but the
                             file name is check.61.exp
                 Review:     AP

LP-2009-09-25-1: Bugfix:     issue1760 test left a reference to a fake host
                 Review:     JG

LP-2009-09-25-0: Bugfix:     Fixed issue1760 test
                 Bugfix:     consumable resources test fails for user *test*
                 Bugfix:     Hedeby test fixes for 1.0u3
                 Enhancem.:  Improved get_current_drmaa_lib_extension{}
                 Enhancem.:  resolve_build_arch_installed_libs{} no longer makes
                             tests unsupported
                 Review:     JG

JG-2009-09-25-0: Bugfix:     fixed cleanup method in bugs/issuezilla/2345
                 Review:     CR

CR-2009-09-22-0: Bugfix:     fixed framework error for tests that return 99
                             in setup procedure to skip the test
                 Review:     AA
