@@ -641,6 +641,7 @@ proc reschedule_checkpointing_forced {} {
 proc reschedule_qsh_qlogin_qrsh_qrlogin {} {
    global ts_config
    global CHECK_USER CHECK_FIRST_FOREIGN_SYSTEM_USER
+   global CHECK_DISPLAY_OUTPUT
    global rerun_queue no_rerun_queue rerun_host no_rerun_host
  
    set host $ts_config(master_host)
@@ -655,6 +656,10 @@ proc reschedule_qsh_qlogin_qrsh_qrlogin {} {
    set qrsh_id2 [open_remote_spawn_process $host $CHECK_USER "$ts_config(product_root)/bin/$local_arch/qrsh" "$args"]
 
    set args "-now no -q [get_queue_instance $rerun_queue $rerun_host]"
+   #This job needs a DISPLAY
+   if { $CHECK_DISPLAY_OUTPUT != "undefined" } {
+      set args "$args -v DISPLAY=$CHECK_DISPLAY_OUTPUT"
+   }
    set qsh_id  [open_remote_spawn_process $host $CHECK_USER "$ts_config(product_root)/bin/$local_arch/qsh" "$args"]
 
    if {[ge_has_feature "new-interactive-job-support"] == true} {
